Feature: Insert de personas en Firebase Firestore

--- a/src/app/elementos/crearElemento.html
+++ b/src/app/elementos/crearElemento.html
@@ -18,7 +18,7 @@
             <button class="button" (click)="addPersona()">Guardar</button>
         </div>
         <div class="row">
-            Personas en el sistema: <b>{{personas.length}}</b>
+            Personas registradas: <b>{{personas.length}}</b>
         </div>
         <code>{{ personas | json }}</code>
     </div>
