Feature: prácticas con módulo HttpClient

--- a/src/app/elementos/elemento.html
+++ b/src/app/elementos/elemento.html
@@ -13,5 +13,12 @@
                 </li>
             </ul>
         </div>
+        <div class="row">
+            <ul>
+                <li *ngFor="let e of fakes| async">
+                    {{e | json}}
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
