Feature: Agregado módulo de consulta de artículo para pruebas de API en Jsonplaceholder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     </a>
     <a routerLink="contacto" class="navbar-item" routerLinkActive="is-active">Contacto</a>
     <a routerLink="personas" class="navbar-item" routerLinkActive="is-active">Personas</a>
+    <a routerLink="articulos" class="navbar-item" routerLinkActive="is-active">Artículos</a>
   </div>
 </nav>
 
