Feature: Avance en finalización del curso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,13 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <!-- navbar items, navbar burger... -->
-    <a routerLink="/" 
-      class="navbar-item" 
-      routerLinkActive="is-active" 
-      [routerLinkActiveOptions]="{exact:true}"
-      >
+    <a routerLink="/" class="navbar-item" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact:true}">
       Home
     </a>
     <a routerLink="contacto" class="navbar-item" routerLinkActive="is-active">Contacto</a>
     <a routerLink="personas" class="navbar-item" routerLinkActive="is-active">Personas</a>
     <a routerLink="articulos" class="navbar-item" routerLinkActive="is-active">Artículos</a>
+    <a routerLink="personas2" class="navbar-item" routerLinkActive="is-active">Otras Personas</a>
   </div>
 </nav>
 
