--- a/src/app/articulos/articulos.html
+++ b/src/app/articulos/articulos.html
@@ -14,9 +14,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-footer-item">
-                            <a href="/#" class="button primary">
-                                {{articulo.id}}
-                            </a>
+                            {{articulo.id}} / {{"1984-09-29" | fechaspipe}}
                         </div>
                     </div>
                 </div>
